Fixing navbar button spacing on mobile.

--- a/frontend/src/scss/layout/_navbar.scss
+++ b/frontend/src/scss/layout/_navbar.scss
@@ -58,7 +58,6 @@
         align-items: center;
         justify-content: center;
         flex-direction: row;
-        gap: 1rem;
     }
 
     &__links
